--- a/product.html
+++ b/product.html
@@ -57,14 +57,9 @@
           class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4"
         >
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img
-              src="/images/Custor Electronics.png"
-              class="h-11 w-[3rem] rounded-full"
-              alt=" Logo"
-            />
             <span
               class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-              >Custor Electronics</span
+              >At Store</span
             >
           </a>
           <button
@@ -99,20 +94,12 @@
               class="flex flex-col mt-4 font-medium md:flex-row md:mt-0 md:space-x-8 rtl:space-x-reverse"
             >
               <li>
-                <a
-                  href="#"
-                  class="block py-2 px-3 text-gray-900 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:dark:hover:bg-transparent dark:border-gray-700"
-                  aria-current="page"
-                  >Home</a
-                >
-              </li>
-              <li>
                 <button
                   id="mega-menu-full-cta-image-button"
                   data-collapse-toggle="mega-menu-full-image-dropdown"
                   class="flex items-center justify-between w-full py-2 px-3 font-medium text-gray-900 border-b border-gray-100 md:w-auto hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:dark:hover:bg-transparent dark:border-gray-700"
                 >
-                  Online Services
+                  Home
                   <svg
                     class="w-2.5 h-2.5 ms-3"
                     aria-hidden="true"
@@ -134,10 +121,10 @@
                 <a
                   href="#"
                   class="block py-2 px-3 text-gray-900 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:dark:hover:bg-transparent dark:border-gray-700"
-                  >Our Blog</a
+                  aria-current="page"
+                  >Online Services</a
                 >
               </li>
-
               <li>
                 <a
                   href="#"
@@ -146,6 +133,52 @@
                 >
               </li>
             </ul>
+          </div>
+        </div>
+        <div
+          id="mega-menu-full-image-dropdown"
+          class="mt-1 bg-white border-gray-200 shadow-sm border-y dark:bg-gray-900 dark:border-gray-600"
+        >
+          <div
+            class="grid max-w-screen-xl px-4 py-5 mx-auto text-sm text-gray-500 dark:text-gray-400 md:grid-cols-3 md:px-6"
+          >
+            <ul
+              class="hidden mb-4 ml-10 space-y-4 md:mb-0 md:block"
+              aria-labelledby="mega-menu-full-image-button"
+            ></ul>
+            <ul class="mb-4 mt-2 space-y-4 md:mb-0"></ul>
+            <a
+              href="#"
+              class="p-8 bg-local bg-black bg-center bg-no-repeat bg-cover rounded-lg bg-blend-multiply hover:bg-blend-soft-light dark:hover:bg-blend-darken"
+              style="background-image: url(/images/Iphone\ 3.jpg)"
+            >
+              <p
+                class="max-w-xl mb-5 font-extrabold leading-tight tracking-tight text-white"
+              >
+                At Store
+              </p>
+              <button
+                type="button"
+                class="inline-flex items-center px-2.5 py-1.5 text-xs font-medium text-center text-white border border-white rounded-lg hover:bg-white hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-700"
+              >
+                Make Your Order
+                <svg
+                  class="w-3 h-3 ms-2 rtl:rotate-180"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 14 10"
+                >
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M1 5h12m0 0L9 1m4 4L9 9"
+                  />
+                </svg>
+              </button>
+            </a>
           </div>
         </div>
       </nav>
@@ -172,51 +205,10 @@
         >
       </div>
       <div id="similarProductsContainer" class="mt-[.1rem] grid gap-[2rem]">
-        <div id="singleProductContainer" class="grid place-content-center">
-          <div id="product grid" class="">
-            <div
-              class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[23rem] lg:h-[26rem] rounded-2xl grid"
-            >
-              <img
-                class="p-8 rounded-t-lg w-5rem"
-                src="/images/Iphone 3.jpg"
-                alt="product image"
-              />
-              <div class="px-5 pb-5">
-                <h5
-                  class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                >
-                  IPhone 12 pro max
-                </h5>
-                <div class="flex items-center mt-2.5 mb-5">
-                  <div class="flex items-center space-x-1 rtl:space-x-reverse">
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-gray-300"></i>
-                  </div>
-                  <span
-                    class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                    >4.0</span
-                  >
-                </div>
-                <div class="flex items-center justify-between">
-                  <span
-                    class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                    >$1599</span
-                  >
-
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                    >Add to cart</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div
+          id="singleProductContainer"
+          class="grid place-content-center"
+        ></div>
         <div id="similarContainer" class="flex flex-col gap-[2rem]">
           <h2
             id="recommended"
@@ -457,6 +449,6 @@
         @custor Dev</a
       >
     </footer>
-    <script type="module" src="/js/app.js"></script>
+    <script type="module" src="/js/product.js"></script>
   </body>
 </html>
