--- a/product.html
+++ b/product.html
@@ -450,5 +450,6 @@
       >
     </footer>
     <script type="module" src="/js/product.js"></script>
+    <script type="module" src="/js/products.js"></script>
   </body>
 </html>
