--- a/index.html
+++ b/index.html
@@ -211,161 +211,6 @@
           id="productsContainer"
           class="grid grid-cols-2 lg:grid-cols-4 place-items-center gap-3 lg:gap-10"
         >
-          <!-- <div class="product grid">
-            <div
-              class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-            >
-              <a href="#">
-                <a href="/category.html?id=${category.id}" class="category">
-                  <div class="catImg-container">
-                    <img src="${category.image}" alt="${category.title}" />
-                  </div>
-                  <p class="categoryName">${category.title}</p>
-                </a>
-              </a>
-            </div>
-          </div>
-          <div class="product grid">
-            <div
-              class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-            >
-              <a href="#">
-                <img
-                  class="p-8 rounded-t-lg w-5rem"
-                  src="/images/Iphone 3.jpg"
-                  alt="product image"
-                />
-              </a>
-              <div class="px-5 pb-5">
-                <a href="#">
-                  <h5
-                    class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                  >
-                    IPhone 12 pro max
-                  </h5>
-                </a>
-                <div class="flex items-center mt-2.5 mb-5">
-                  <div class="flex items-center space-x-1 rtl:space-x-reverse">
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-gray-300"></i>
-                  </div>
-                  <span
-                    class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                    >4.0</span
-                  >
-                </div>
-                <div class="flex items-center justify-between">
-                  <span
-                    class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                    >$1599</span
-                  >
-
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                    >Add to cart</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product grid">
-            <div
-              class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-            >
-              <a href="#">
-                <img
-                  class="p-8 rounded-t-lg w-5rem"
-                  src="/images/Iphone 3.jpg"
-                  alt="product image"
-                />
-              </a>
-              <div class="px-5 pb-5">
-                <a href="#">
-                  <h5
-                    class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                  >
-                    IPhone 12 pro max
-                  </h5>
-                </a>
-                <div class="flex items-center mt-2.5 mb-5">
-                  <div class="flex items-center space-x-1 rtl:space-x-reverse">
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-gray-300"></i>
-                  </div>
-                  <span
-                    class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                    >4.0</span
-                  >
-                </div>
-                <div class="flex items-center justify-between">
-                  <span
-                    class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                    >$1599</span
-                  >
-
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                    >Add to cart</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product grid">
-            <div
-              class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-            >
-              <a href="#">
-                <img
-                  class="p-8 rounded-t-lg w-5rem"
-                  src="/images/Iphone 3.jpg"
-                  alt="product image"
-                />
-              </a>
-              <div class="px-5 pb-5">
-                <a href="#">
-                  <h5
-                    class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                  >
-                    IPhone 12 pro max
-                  </h5>
-                </a>
-                <div class="flex items-center mt-2.5 mb-5">
-                  <div class="flex items-center space-x-1 rtl:space-x-reverse">
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-gray-300"></i>
-                  </div>
-                  <span
-                    class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                    >4.0</span
-                  >
-                </div>
-                <div class="flex items-center justify-between">
-                  <span
-                    class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                    >$1599</span
-                  >
-
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                    >Add to cart</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div> -->
         </div>
       
       </div>
@@ -451,5 +296,6 @@
     </footer>
 
     <script type="module" src="/js/app.js"></script>
+    <script type="module" src="/js/products.js"></script>
   </body>
 </html>
