--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
       id="home"
       class="flex flex-col align-center justify-center gap-[1rem]"
     >
+    <div class="note">message</div>
       <div id="topProductsContainer" class="mt-[.1rem]">
         <div
           id="LinkToProducts"
