--- a/cart.html
+++ b/cart.html
@@ -49,7 +49,6 @@
   <body>
     <header>
       <!-- Mega Menu Navigation -->
-
       <nav
         class="bg-white border-gray-200 dark:border-gray-600 dark:bg-gray-950"
       >
@@ -57,14 +56,9 @@
           class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4"
         >
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img
-              src="/images/Custor Electronics.png"
-              class="h-11 w-[3rem] rounded-full"
-              alt=" Logo"
-            />
             <span
               class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-              >Custor Electronics</span
+              >At Store</span
             >
           </a>
           <button
@@ -99,20 +93,12 @@
               class="flex flex-col mt-4 font-medium md:flex-row md:mt-0 md:space-x-8 rtl:space-x-reverse"
             >
               <li>
-                <a
-                  href="#"
-                  class="block py-2 px-3 text-gray-900 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:dark:hover:bg-transparent dark:border-gray-700"
-                  aria-current="page"
-                  >Home</a
-                >
-              </li>
-              <li>
                 <button
                   id="mega-menu-full-cta-image-button"
                   data-collapse-toggle="mega-menu-full-image-dropdown"
                   class="flex items-center justify-between w-full py-2 px-3 font-medium text-gray-900 border-b border-gray-100 md:w-auto hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:dark:hover:bg-transparent dark:border-gray-700"
                 >
-                  Online Services
+                  Home
                   <svg
                     class="w-2.5 h-2.5 ms-3"
                     aria-hidden="true"
@@ -134,10 +120,10 @@
                 <a
                   href="#"
                   class="block py-2 px-3 text-gray-900 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:dark:hover:bg-transparent dark:border-gray-700"
-                  >Our Blog</a
+                  aria-current="page"
+                  >Online Services</a
                 >
               </li>
-
               <li>
                 <a
                   href="#"
@@ -146,6 +132,52 @@
                 >
               </li>
             </ul>
+          </div>
+        </div>
+        <div
+          id="mega-menu-full-image-dropdown"
+          class="mt-1 bg-white border-gray-200 shadow-sm border-y dark:bg-gray-900 dark:border-gray-600"
+        >
+          <div
+            class="grid max-w-screen-xl px-4 py-5 mx-auto text-sm text-gray-500 dark:text-gray-400 md:grid-cols-3 md:px-6"
+          >
+            <ul
+              class="hidden mb-4 ml-10 space-y-4 md:mb-0 md:block"
+              aria-labelledby="mega-menu-full-image-button"
+            ></ul>
+            <ul class="mb-4 mt-2 space-y-4 md:mb-0"></ul>
+            <a
+              href="#"
+              class="p-8 bg-local bg-black bg-center bg-no-repeat bg-cover rounded-lg bg-blend-multiply hover:bg-blend-soft-light dark:hover:bg-blend-darken"
+              style="background-image: url(/images/Iphone\ 3.jpg)"
+            >
+              <p
+                class="max-w-xl mb-5 font-extrabold leading-tight tracking-tight text-white"
+              >
+                At Store
+              </p>
+              <button
+                type="button"
+                class="inline-flex items-center px-2.5 py-1.5 text-xs font-medium text-center text-white border border-white rounded-lg hover:bg-white hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-700"
+              >
+                Make Your Order
+                <svg
+                  class="w-3 h-3 ms-2 rtl:rotate-180"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 14 10"
+                >
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M1 5h12m0 0L9 1m4 4L9 9"
+                  />
+                </svg>
+              </button>
+            </a>
           </div>
         </div>
       </nav>
@@ -158,13 +190,13 @@
       <div id="cartProductsContainer" class="mt-[.1rem]">
         <div
           id="LinkToProducts"
-          class="flex p-[.4rem] mt-[.5rem] align-middle justify-between lg:py-[.5rem] px-[3.5rem] gap-[3rem]"
+          class="flex p-[.4rem] text-xl mt-[.5rem] align-middle justify-between py-[.5rem] px-[3.5rem] gap-[3rem]"
         >
           <p
             id="productsDescription"
             class="lg:border-r-slate-900 text-slate-900 font-extrabold text-[1.5rem]"
           >
-            Cart Items
+            Cart Items <span class="allCartItems">0</span>
           </p>
           <a
             href="/index.html "
@@ -173,91 +205,14 @@
           >
         </div>
         <div
-          id="cartProductsContainer"
-          class="flex flex-col gap-3 lg:gap-7 lg:ml-[3rem]"
+          id="cartContainer"
+          class="flex flex-col gap-3 text-center lg:gap-7 lg:ml-[3rem]"
         >
-          <div class="cart">
-            <div
-              id="cart"
-              class="flex lg:gap-[2rem] gap-8 align-center justify-center rounded-lg bg-slate-900 w-[23rem] lg:w-[25rem] p-[1rem]"
-            >
-              <div class="imgContainer">
-                <img src="/images/Iphone 3.jpg" alt="image" class="w-[4rem]" />
-              </div>
-              <div id="itemDescriptions" class="flex gap-10">
-                <h2 id="product-title" class="text-slate-50 font-extrabold">
-                  title
-                </h2>
-                <p id="product-price" class="text-slate-50 font-extrabold">
-                  $2340
-                </p>
-              </div>
-              <div class="deleteBtn">
-                <button
-                  id="product-btn"
-                  class="text-slate-50 bg-red-500 hover:bg-red-700 px-[.5rem] py-1 rounded-md ]"
-                >
-                  delete
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="cart">
-            <div
-              id="cart"
-              class="flex lg:gap-[2rem] gap-8 align-center justify-center rounded-lg bg-slate-900 w-[23rem] lg:w-[25rem] p-[1rem]"
-            >
-              <div class="imgContainer">
-                <img src="/images/Iphone 3.jpg" alt="image" class="w-[4rem]" />
-              </div>
-              <div id="itemDescriptions" class="flex gap-10">
-                <h2 id="product-title" class="text-slate-50 font-extrabold">
-                  title
-                </h2>
-                <p id="product-price" class="text-slate-50 font-extrabold">
-                  $2340
-                </p>
-              </div>
-              <div class="deleteBtn">
-                <button
-                  id="product-btn"
-                  class="text-slate-50 bg-red-500 hover:bg-red-700 px-[.5rem] py-1 rounded-md ]"
-                >
-                  delete
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="cart">
-            <div
-              id="cart"
-              class="flex lg:gap-[2rem] gap-8 align-center justify-center rounded-lg bg-slate-900 w-[23rem] lg:w-[25rem] p-[1rem]"
-            >
-              <div class="imgContainer">
-                <img src="/images/Iphone 3.jpg" alt="image" class="w-[4rem]" />
-              </div>
-              <div id="itemDescriptions" class="flex gap-10">
-                <h2 id="product-title" class="text-slate-50 font-extrabold">
-                  title
-                </h2>
-                <p id="product-price" class="text-slate-50 font-extrabold">
-                  $2340
-                </p>
-              </div>
-              <div class="deleteBtn">
-                <button
-                  id="product-btn"
-                  class="text-slate-50 bg-red-500 hover:bg-red-700 px-[.5rem] py-1 rounded-md ]"
-                >
-                  delete
-                </button>
-              </div>
-            </div>
-          </div>
+       
       </div>
     </section>
 
-   
-    <script type="module" src="/js/app.js"></script>
+    <script type="module" src="/js/products.js"></script>
+    <script type="module" src="/js/cart.js"></script>
   </body>
 </html>
