--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Ian Sebugenyi - Web Developer in Uganda | Contact: 0773443367 | Custor Electronics - Quality Electronics Store"
+      content="Ian Sebugenyi - Web Developer in Uganda | Contact: 0773443367 | At Stock - Quality Electronics Store"
     />
     <meta
       name="keywords"
@@ -17,7 +17,7 @@
     <meta name="publisher" content="Custor Dev" />
     <meta
       property="og:title"
-      content="Custor Electronics | Quality Electronics - Ian Sebugenyi, Web Developer in Uganda | Contact: 0773443367"
+      content="Custor Electronics | Quality Products - Ian Sebugenyi, Web Developer in Uganda | Contact: 0773443367"
     />
     <meta
       property="og:description"
@@ -184,10 +184,10 @@
     </header>
     <!-- Cart Section -->
     <section
-      id="home"
+      id="Cart-Section"
       class="flex flex-col align-center justify-center gap-[1rem]"
     >
-      <div id="cartProductsContainer" class="mt-[.1rem]">
+      <div id="cartProductsContainer" class="mt-[.1rem] ">
         <div
           id="LinkToProducts"
           class="flex p-[.4rem] text-xl mt-[.5rem] align-middle justify-between py-[.5rem] px-[3.5rem] gap-[3rem]"
@@ -204,12 +204,64 @@
             >Back Home</a
           >
         </div>
-        <div
-          id="cartContainer"
-          class="flex flex-col gap-3 text-center lg:gap-7 lg:ml-[3rem]"
-        >
-       
+     <div id="cartContainer">
+      <!-- <div class="cart">
+        <div class="imgcontainer"> 
+          <img src="/images/Iphone 3.jpg" alt="">
+        </div>
+        <div class="description">
+        <h2 class="cartName text-slate-900 text-2xl font-extrabold">Title</h2>
+        <p class="cartrPrice text-slate-900 text-2xl font-extrabold">$1000</p>
+
+        </div>
+        <button class="deleteBtn">
+          <i class='bx bxs-x-circle text-slate-900 hover:text-red-700'>
+
+          </i></button>
       </div>
+      <div class="cart">
+        <div class="imgcontainer"> 
+          <img src="/images/Iphone 3.jpg" alt="">
+        </div>
+        <div class="description">
+        <h2 class="cartName text-slate-900 text-2xl font-extrabold">Title</h2>
+        <p class="cartrPrice text-slate-900 text-2xl font-extrabold">$1000</p>
+
+        </div>
+        <button class="deleteBtn">
+          <i class='bx bxs-x-circle text-slate-900 hover:text-red-700'>
+
+          </i></button>
+      </div>
+      <div class="cart">
+        <div class="imgcontainer"> 
+          <img src="/images/Iphone 3.jpg" alt="">
+        </div>
+        <div class="description">
+        <h2 class="cartName text-slate-900 text-2xl font-extrabold">Title</h2>
+        <p class="cartrPrice text-slate-900 text-2xl font-extrabold">$1000</p>
+
+        </div>
+        <button class="deleteBtn">
+          <i class='bx bxs-x-circle text-slate-900 hover:text-red-700'>
+
+          </i></button>
+      </div>
+      <div class="cart">
+        <div class="imgcontainer"> 
+          <img src="/images/Iphone 3.jpg" alt="">
+        </div>
+        <div class="description">
+        <h2 class="cartName text-slate-900 text-2xl font-extrabold">Title</h2>
+        <p class="cartrPrice text-slate-900 text-2xl font-extrabold">$1000</p>
+
+        </div>
+        <button class="deleteBtn">
+          <i class='bx bxs-x-circle text-slate-900 hover:text-red-700'>
+
+          </i></button>
+      </div> -->
+     </div>
     </section>
 
     <script type="module" src="/js/products.js"></script>
