--- a/category.html
+++ b/category.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Ian Sebugenyi - Web Developer in Uganda | Contact: 0773443367 | Custor Electronics - Quality Electronics Store"
+      content="Ian Sebugenyi - Web Developer in Uganda | Contact: 0773443367 | At Stock - Quality Stock "
     />
     <meta
       name="keywords"
-      content="web developer, Uganda, Kampala, SEO, HTML, CSS, JavaScript, electronics, desktops, laptops, monitors, tablets"
+      content="web developer, Uganda, Kampala, SEO, HTML, CSS, JavaScript, Stock, desktops, laptops, monitors, tablets"
     />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Ian Sebugenyi" />
     <meta name="publisher" content="Custor Dev" />
     <meta
       property="og:title"
-      content="Custor Electronics | Quality Electronics - Ian Sebugenyi, Web Developer in Uganda | Contact: 0773443367"
+      content="At Stock Stock | Quality Stock - Ian Sebugenyi, Web Developer in Uganda | Contact: 0773443367"
     />
     <meta
       property="og:description"
-      content="Explore a wide range of electronics at Custor Electronics, managed by Ian Sebugenyi, an experienced web developer in Uganda. Contact: 0773443367"
+      content="Explore a wide range of Stock at At Stock Stock, managed by Ian Sebugenyi, an experienced web developer in Uganda. Contact: 0773443367"
     />
     <meta property="og:image" content="https://your-og-image-url.com" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -44,7 +44,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.scss" />
-    <title>Custor Electronics Ug</title>
+    <title>At Stock</title>
   </head>
   <body>
     <header>
@@ -59,7 +59,7 @@
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <span
               class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-              >At Store</span
+              >AT STOCK</span
             >
           </a>
           <button
@@ -209,54 +209,7 @@
           id="categoryContainer"
           class="grid grid-cols-2 lg:grid-cols-4 place-items-center gap-3 lg:gap-10"
         >
-          <div class="product grid">
-            <div
-              class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-            >
-              <a href="product.html">
-                <img
-                  class="p-8 rounded-t-lg w-5rem"
-                  src="/images/Iphone 3.jpg"
-                  alt="product image"
-                />
-              </a>
-              <div class="px-5 pb-5">
-                <a href="#">
-                  <h5
-                    class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                  >
-                    IPhone 12 pro max
-                  </h5>
-                </a>
-                <div class="flex items-center mt-2.5 mb-5">
-                  <div class="flex items-center space-x-1 rtl:space-x-reverse">
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-gray-300"></i>
-                  </div>
-                  <span
-                    class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                    >4.0</span
-                  >
-                </div>
-                <div class="flex items-center justify-between">
-                  <span
-                    class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                    >$1599</span
-                  >
-
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                    >Add to cart</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product grid">
+          <!-- <div class="product grid">
             <div
               class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
             >
@@ -302,54 +255,7 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="product grid">
-            <div
-              class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-            >
-              <a href="#">
-                <img
-                  class="p-8 rounded-t-lg w-5rem"
-                  src="/images/Iphone 3.jpg"
-                  alt="product image"
-                />
-              </a>
-              <div class="px-5 pb-5">
-                <a href="#">
-                  <h5
-                    class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                  >
-                    IPhone 12 pro max
-                  </h5>
-                </a>
-                <div class="flex items-center mt-2.5 mb-5">
-                  <div class="flex items-center space-x-1 rtl:space-x-reverse">
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-yellow-300"></i>
-                    <i class="bx bxs-star text-gray-300"></i>
-                  </div>
-                  <span
-                    class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                    >4.0</span
-                  >
-                </div>
-                <div class="flex items-center justify-between">
-                  <span
-                    class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                    >$1599</span
-                  >
-
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                    >Add to cart</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -359,8 +265,8 @@
     >
       <span
         class="text-center text-sm text-gray-50 sm:text-center dark:text-gray-50"
-        >© 2023 <a href="#" class="hover:underline">Custor Electronics</a>. All
-        Rights Reserved.
+        >© 2023 <a href="#" class="hover:underline">At Stock</a>. All Rights
+        Reserved.
       </span>
       <ul
         class="flex align-center justify-center flex-wrap items-center mt-3 text-sm font-medium text-gray-50 dark:text-gray-50 sm:mt-0"
@@ -384,5 +290,6 @@
       >
     </footer>
     <script type="module" src="/js/category.js"></script>
+    <script type="module" src="js/products.js"></script>
   </body>
 </html>
