--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.scss" />
-    <title>At Store Ug</title>
+    <title>At Stock</title>
   </head>
   <body>
     <header>
@@ -217,8 +217,8 @@
     >
       <span
         class="text-center text-sm text-gray-50 sm:text-center dark:text-gray-50"
-        >© 2023 <a href="#" class="hover:underline">Custor Electronics</a>. All
-        Rights Reserved.
+        >© 2023 <a href="#" class="hover:underline">At Stock</a>. All Rights
+        Reserved.
       </span>
       <ul
         class="flex align-center justify-center flex-wrap items-center mt-3 text-sm font-medium text-gray-50 dark:text-gray-50 sm:mt-0"
