--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <span
               class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-              >At Store</span
+              >At Stock</span
             >
           </a>
           <button
@@ -155,13 +155,13 @@
               <p
                 class="max-w-xl mb-5 font-extrabold leading-tight tracking-tight text-white"
               >
-                At Store
+                At Stock
               </p>
               <button
                 type="button"
                 class="inline-flex items-center px-2.5 py-1.5 text-xs font-medium text-center text-white border border-white rounded-lg hover:bg-white hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-700"
               >
-              All Products
+            ALL PRODUCTS
                 <svg
                   class="w-3 h-3 ms-2 rtl:rotate-180"
                   aria-hidden="true"
@@ -198,12 +198,12 @@
           <a
            
             class="  text-slate-50 inline-flex items-center px-[2.5rem] py-[1rem] text-xs text-center border border-slate-900 rounded-lg bg-slate-900  font-extrabold"
-            >CATEGORIES</a
+            >PRODUCTS</a
           >
           <a
           href="/cart.html "
           class="cartcontainer hover:underline hover:text-blue-600 dark:hover:text-blue-500 text-slate-50 inline-flex items-center px-[3rem] py-[.5rem] text-xs text-center border border-slate-900 rounded-lg hover:bg-slate-900 bg-slate-900 hover:border-black font-extrabold"
-          >Cart Items &nbsp;<span class="cart text-slate-50 font-extrabold"
+          >CART ITEMS &nbsp;<span class="cart text-slate-50 font-extrabold"
             >0</span
           ></a
         >
@@ -218,35 +218,8 @@
       </div>
       <div class="newContainer flex flex-col gap-8">
       <h2 class="flex ml-[3rem] bg-slate-900 w-[10rem] text-slate-50 font-extrabold rounded-md p-[.5rem]"> AT STOCK</h2>
-    <div class="grid grid-cols-2 gap-8 place-items-center">
-      <a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-900 dark:bg-gray-900 dark:hover:bg-black">
-        <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/images/elegant-glass-bottle-women-perfumes-with-wild-berries_88138-196.avif" alt="">
-        <div class="flex flex-col justify-between p-4 leading-normal">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Brand Black New Berries 2024</h5>
-            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">The natural Scent from berries comes with in a Brand of Black New Berries. <br><span  class="text-slate-50">Eau De Toillete</span> <br>Fragrance For Women</p>
-        </div>
-    </a>
-    <a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-black">
-      <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/images/electronics 4avif.jpg" alt="">
-      <div class="flex flex-col justify-between p-4 leading-normal">
-          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Premium Laptops 12Gen</h5>
-          <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"> the biggest enterprise technical Laptops of 2024 so far, they come with premium specifications and full year garantie. <br>All At Store</p>
-      </div>
-  </a>
-  <a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-black">
-    <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/images/electronics.jpg" alt="">
-    <div class="flex flex-col justify-between p-4 leading-normal">
-        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Full Stock Packages</h5>
-        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order. <br>For that Experience </p>
-    </div>
-</a>
-<a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-black">
-  <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/images/mock-up-packaging-cosmetic-amenities_105762-2331.avif" alt="">
-  <div class="flex flex-col justify-between p-4 leading-normal">
-      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"> Stock Groceries</h5>
-      <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">The best Fresh finds and great deals Exploring the aisles of deliciousness in AT Store Groceries. <br>Stock Yours Now</p>
-  </div>
-</a>
+    <div class="catiesContainer grid grid-cols-2 gap-8 place-items-center">
+
   </div>
 </div>
 
@@ -271,7 +244,7 @@
     >
       <span
         class="text-center text-sm text-gray-50 sm:text-center dark:text-gray-50"
-        >© 2023 <a href="#" class="hover:underline">Custor Electronics</a>. All
+        >© 2023 <a href="#" class="hover:underline">At Stock</a>. All
         Rights Reserved.
       </span>
       <ul
