--- a/product.html
+++ b/product.html
@@ -59,7 +59,7 @@
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <span
               class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-              >At Store</span
+              >At Stock</span
             >
           </a>
           <button
@@ -219,204 +219,7 @@
           <div
             id="SimilarProductsContainer"
             class="grid grid-cols-2 lg:grid-cols-4 place-items-center gap-3 lg:gap-10"
-          >
-            <div class="product grid">
-              <div
-                class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-              >
-                <a href="#">
-                  <img
-                    class="p-8 rounded-t-lg w-5rem"
-                    src="/images/Iphone 3.jpg"
-                    alt="product image"
-                  />
-                </a>
-                <div class="px-5 pb-5">
-                  <a href="#">
-                    <h5
-                      class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                    >
-                      IPhone 12 pro max
-                    </h5>
-                  </a>
-                  <div class="flex items-center mt-2.5 mb-5">
-                    <div
-                      class="flex items-center space-x-1 rtl:space-x-reverse"
-                    >
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-gray-300"></i>
-                    </div>
-                    <span
-                      class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                      >4.0</span
-                    >
-                  </div>
-                  <div class="flex items-center justify-between">
-                    <span
-                      class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                      >$1599</span
-                    >
-
-                    <a
-                      href="#"
-                      class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                      >Add to cart</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="product grid">
-              <div
-                class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-              >
-                <a href="#">
-                  <img
-                    class="p-8 rounded-t-lg w-5rem"
-                    src="/images/Iphone 3.jpg"
-                    alt="product image"
-                  />
-                </a>
-                <div class="px-5 pb-5">
-                  <a href="#">
-                    <h5
-                      class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                    >
-                      IPhone 12 pro max
-                    </h5>
-                  </a>
-                  <div class="flex items-center mt-2.5 mb-5">
-                    <div
-                      class="flex items-center space-x-1 rtl:space-x-reverse"
-                    >
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-gray-300"></i>
-                    </div>
-                    <span
-                      class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                      >4.0</span
-                    >
-                  </div>
-                  <div class="flex items-center justify-between">
-                    <span
-                      class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                      >$1599</span
-                    >
-
-                    <a
-                      href="#"
-                      class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                      >Add to cart</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="product grid">
-              <div
-                class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-              >
-                <a href="#">
-                  <img
-                    class="p-8 rounded-t-lg w-5rem"
-                    src="/images/Iphone 3.jpg"
-                    alt="product image"
-                  />
-                </a>
-                <div class="px-5 pb-5">
-                  <a href="#">
-                    <h5
-                      class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                    >
-                      IPhone 12 pro max
-                    </h5>
-                  </a>
-                  <div class="flex items-center mt-2.5 mb-5">
-                    <div
-                      class="flex items-center space-x-1 rtl:space-x-reverse"
-                    >
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-gray-300"></i>
-                    </div>
-                    <span
-                      class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                      >4.0</span
-                    >
-                  </div>
-                  <div class="flex items-center justify-between">
-                    <span
-                      class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                      >$1599</span
-                    >
-
-                    <a
-                      href="#"
-                      class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                      >Add to cart</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="product grid">
-              <div
-                class="bg-slate-900 w-[11rem] h-[20rem] lg:w-[18rem] lg:h-[23rem] rounded-2xl grid"
-              >
-                <a href="#">
-                  <img
-                    class="p-8 rounded-t-lg w-5rem"
-                    src="/images/Iphone 3.jpg"
-                    alt="product image"
-                  />
-                </a>
-                <div class="px-5 pb-5">
-                  <a href="#">
-                    <h5
-                      class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-                    >
-                      IPhone 12 pro max
-                    </h5>
-                  </a>
-                  <div class="flex items-center mt-2.5 mb-5">
-                    <div
-                      class="flex items-center space-x-1 rtl:space-x-reverse"
-                    >
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-yellow-300"></i>
-                      <i class="bx bxs-star text-gray-300"></i>
-                    </div>
-                    <span
-                      class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-1"
-                      >4.0</span
-                    >
-                  </div>
-                  <div class="flex items-center justify-between">
-                    <span
-                      class="lg:text-3xl font-bold text-gray-900 dark:text-white"
-                      >$1599</span
-                    >
-
-                    <a
-                      href="#"
-                      class="text-white bg-blue-700 hover:bg-blue-800 sm:font-normal sm:p-1 lg:font-medium rounded-lg text-sm lg:px-5 lg:py-2.5 px-1.5 py-[.3rem] text-center"
-                      >Add to cart</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          ></div>
         </div>
       </div>
     </section>
@@ -425,8 +228,8 @@
     >
       <span
         class="text-center text-sm text-gray-50 sm:text-center dark:text-gray-50"
-        >© 2023 <a href="#" class="hover:underline">Custor Electronics</a>. All
-        Rights Reserved.
+        >© 2023 <a href="#" class="hover:underline">At Stock</a>. All Rights
+        Reserved.
       </span>
       <ul
         class="flex align-center justify-center flex-wrap items-center mt-3 text-sm font-medium text-gray-50 dark:text-gray-50 sm:mt-0"
