--- a/cart.html
+++ b/cart.html
@@ -264,7 +264,7 @@
      </div>
     </section>
 
-    <script type="module" src="/js/products.js"></script>
-    <script type="module" src="/js/cart.js"></script>
+    <script type="module" src="products.js"></script>
+    <script type="module" src="cart.js"></script>
   </body>
 </html>
