--- a/category.html
+++ b/category.html
@@ -289,7 +289,7 @@
         @custor Dev</a
       >
     </footer>
-    <script type="module" src="/js/category.js"></script>
-    <script type="module" src="js/products.js"></script>
+    <script type="module" src="category.js"></script>
+    <script type="module" src="products.js"></script>
   </body>
 </html>
