--- a/product.html
+++ b/product.html
@@ -252,7 +252,7 @@
         @custor Dev</a
       >
     </footer>
-    <script type="module" src="/js/product.js"></script>
-    <script type="module" src="/js/products.js"></script>
+    <script type="module" src="product.js"></script>
+    <script type="module" src="products.js"></script>
   </body>
 </html>
