--- a/products.html
+++ b/products.html
@@ -241,6 +241,6 @@
         @custor Dev</a
       >
     </footer>
-    <script type="module" src="/js/products.js"></script>
+    <script type="module" src="products.js"></script>
   </body>
 </html>
