--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@
         @custor Dev</a
       >
     </footer>
-
-    <script type="module" src="/js/app.js"></script>
-    <script type="module" src="/js/products.js"></script>
+    <script type="module" src="/app.js"></script>
+    <script type="module" src="/products.js"></script>
   </body>
 </html>
